--- a/kustomize/service.yaml
+++ b/kustomize/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: podinfo
+  annotations:
+    metallb.universe.tf/loadBalancerIPs: 10.100.16.8
 spec:
   type: ClusterIP
   selector:
